# cleez

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
demo/: demo.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/cleez/: __init__.py  actions.py  argument.py  cleez.py  colors.py  command.py  exceptions.py  help.py  parser.py  testing.py
tests/: __init__.py  conftest.py  test_commands.py  test_scan.py
tests/commands/: dummy_commands.py
